--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,13 @@
 # https://docs.gitlab.com/ee/development/cicd/templates.html
 # This specific template is located at:
 # https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Getting-Started.gitlab-ci.yml
+image: python3.7
 
+default:
+  tags:
+   - converter
+variables:
+  USERNAME: poorani
 stages:          # List of stages for jobs, and their order of execution
   - build
   - test
